<resources>
    <string name="app_name">uts</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_member_register">New Member? Register</string>
    <string name="register">Register</string>
    <string name="birthdate">Birthdate (dd/mm/yyyy)</string>
    <string name="already_have_an_account_log_in">Already Have an Account? Log in</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="date">Date</string>
    <string name="recent_travel_plan">Recent Travel Plan</string>
    <string name="train_class">Class</string>
    <string name="train">train</string>
    <string name="departure">Departure</string>
    <string name="date_dd_mm_yyyy">Date (dd/mm/yyyy)</string>
    <string name="submit">Submit</string>
    <string name="travel_packages">Travel Packages:</string>
    <string name="add_travel_plan">Add Travel Plan</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="window_seat">Window seat</string>
    <string name="aisle_seat">Aisle seat</string>
    <string name="front_seat">Front seat</string>
    <string name="wifi">Wifi</string>
    <string name="extra_baggage">Extra baggage</string>
    <string name="pillow">Pillow</string>
    <string name="blanket">Blanket</string>
    <string name="check_travel_schedule">Check Travel Schedule:</string>
    <string name="total_price">Total Price:</string>
    <string name="rp0_00">Rp0,00</string>
    <string name="add_new_travel_plan">Add New Travel Plan</string>
    <string name="you_have_no_travel_plan_yet">You have no travel plan yet</string>
    <array name="wagon_classes">
        <item>Executive</item>
        <item>Business</item>
        <item>Economy</item>
    </array>
    <array name="train_stations">
        <item>Stasiun Gambir, DKI Jakarta</item>
        <item>Stasiun Kalioso, Jawa Tengah</item>
        <item>Stasiun Lempuyangan, D.I Yogyakarta</item>
        <item>Stasiun Wates, D.I Yogyakarta</item>
        <item>Stasiun Magetan, Jawa Timur</item>
    </array>
    <string name="nim">NIM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="search_travel_plan">Search Travel Plan</string>
    <string name="logout">Logout</string>
    <string name="travel_list">Travel List</string>
    <string name="station_list">Station List</string>
    <string name="delete_button">Delete Button</string>
    <string name="edit_button">Edit Button</string>
</resources>