<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/input_form_travel_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/submit_travel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/add_new_travel_plan"
            android:textAlignment="center"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/text_view_train_classes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Train class:" />

        <Spinner
            android:id="@+id/spinner_train_classes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"/>

        <TextView
            android:id="@+id/text_view_travel_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Departure:" />

        <Spinner
            android:id="@+id/spinner_travel_departure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"/>

        <TextView
            android:id="@+id/text_view_travel_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Destination:" />

        <Spinner
            android:id="@+id/spinner_travel_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"/>

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:orientation="horizontal" >

                <ToggleButton
                    android:id="@+id/toggle_lunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/selector_toggle_button"
                    android:textAllCaps="false"
                    android:textOn="@string/lunch"
                    android:textOff="@string/lunch" />

                <ToggleButton
                    android:id="@+id/toggle_dinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/selector_toggle_button"
                    android:textAllCaps="false"
                    android:textOn="@string/dinner"
                    android:textOff="@string/dinner" />

                <ToggleButton
                    android:id="@+id/toggle_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/selector_toggle_button"
                    android:textAllCaps="false"
                    android:textOn="@string/breakfast"
                    android:textOff="@string/breakfast" />

                <ToggleButton
                    android:id="@+id/toggle_window_seat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/selector_toggle_button"
                    android:textAllCaps="false"
                    android:textOn="@string/window_seat"
                    android:textOff="@string/window_seat" />

                <ToggleButton
                    android:id="@+id/toggle_aisle_seat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/selector_toggle_button"
                    android:textAllCaps="false"
                    android:textOn="@string/aisle_seat"
                    android:textOff="@string/aisle_seat" />

                <ToggleButton
                    android:id="@+id/toggle_extra_baggage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/selector_toggle_button"
                    android:textAllCaps="false"
                    android:textOn="@string/extra_baggage"
                    android:textOff="@string/extra_baggage" />

                <ToggleButton
                    android:id="@+id/toggle_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/selector_toggle_button"
                    android:textAllCaps="false"
                    android:textOn="@string/wifi"
                    android:textOff="@string/wifi" />

                <ToggleButton
                    android:id="@+id/toggle_pillow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/selector_toggle_button"
                    android:textAllCaps="false"
                    android:textOn="@string/pillow"
                    android:textOff="@string/pillow" />

                <ToggleButton
                    android:id="@+id/toggle_blanket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/selector_toggle_button"
                    android:textAllCaps="false"
                    android:textOn="@string/blanket"
                    android:textOff="@string/blanket" />

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                app:boxStrokeColor="@color/primary" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_travel_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/date_dd_mm_yyyy"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_show_calendar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_edit_calendar"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/total_price"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_view_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/rp0_00"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/submit_travel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_form_travel_plan">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:background="@drawable/rounded_btn"
            android:fontFamily="@font/poppins"
            android:text="@string/submit"
            android:textSize="16sp"
            app:backgroundTint="@color/primary" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>